--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -26,6 +26,7 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>capacitor</string>
+        <string>nte</string>
 			</array>
 		</dict>
 	</array>
@@ -73,5 +74,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>mailto</string>
+  </array>
 </dict>
 </plist>
