--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@ionic/angular": "^4.7.1",
     "@ionic/pwa-elements": "^1.4.1",
     "@ionic/storage": "^2.2.0",
+    "@types/chart.js": "^2.8.5",
     "apexcharts": "^3.8.6",
     "autolinker": "^3.11.0",
     "call-number": "^1.0.1",
     "chart.js": "^2.8.0",
+    "chartjs-plugin-datalabels": "^0.7.0",
     "chartjs-plugin-doughnutlabel": "^2.0.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-email-composer": "^0.9.2",
